--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -157,7 +157,8 @@
     }
 
     .goldenCardSection {
-        margin-top: -50px;
+        margin-top: -30px;
+        padding: 0 16px;
     }
 
     .searchSection {
